2011-12-02  Hajime Morrita  <morrita@chromium.org>

        Unreviewed, rolling out r101751 and r101775.
        http://trac.webkit.org/changeset/101751
        http://trac.webkit.org/changeset/101775
        https://bugs.webkit.org/show_bug.cgi?id=73191

        breaks Windows build

        * JavaScriptCore.xcodeproj/project.pbxproj:
        * config.h:
        * runtime/JSExportMacros.h: Removed.
        * wtf/ExportMacros.h:
        * wtf/Platform.h:
        * wtf/WTFThreadData.h:
        * wtf/text/AtomicString.h:
        * wtf/text/StringStatics.cpp:

2011-12-01  Hajime Morrita  <morrita@chromium.org>

        JS_INLINE and WTF_INLINE should be visible from WebCore
        https://bugs.webkit.org/show_bug.cgi?id=73191

        - Moved Export related macro definitions from config.h to ExportMacros.h and JSExportMacros.h.
        - Moved WTF_USE_JSC and WTF_USE_V8 from various config.h family to Platform.h.
        - Replaced JS_EXPORTDATA in wtf moudule with newly introduced WTF_EXPORTDATA.

        Reviewed by Kevin Ollivier.

        * JavaScriptCore.xcodeproj/project.pbxproj:
        * config.h:
        * runtime/JSExportMacros.h: Added.
        * wtf/ExportMacros.h:
        * wtf/Platform.h:
        * wtf/WTFThreadData.h:
        * wtf/text/AtomicString.h:
        * wtf/text/StringStatics.cpp:

2011-12-01  Michael Saboff  <msaboff@apple.com>

        Changes proposed for 73457 slow down Kraken json-parse-financial
        https://bugs.webkit.org/show_bug.cgi?id=73584

        Restructured StringImpl::equal to take advantage of 8 or 4 bytes
        at a time when possible.

        This is worth ~3% on Kraken json-parse-financial. It provides 
        ~2% on SunSpider string-unpack-code.

        Reviewed by Sam Weinig.

        * wtf/text/StringImpl.cpp:
        (WTF::equal):

2011-12-01  Oliver Hunt  <oliver@apple.com>

        Support integer typed arrays in the DFG JIT
        https://bugs.webkit.org/show_bug.cgi?id=73608
