@@ -1,3 +1,13 @@
+2011-12-02  Zoltan Herczeg  <zherczeg@webkit.org>
+
+        MacroAssemblerSH4 does not implement readCallTarget
+        https://bugs.webkit.org/show_bug.cgi?id=73434
+
+        Reviewed by Csaba Osztrogonác.
+
+        * assembler/SH4Assembler.h:
+        (JSC::SH4Assembler::readCallTarget): Support for SH4.
+
 2011-12-02  Hajime Morrita  <morrita@chromium.org>
 
         Unreviewed, rolling out r101751 and r101775.
